--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title></title>
     <style>
           .footer {
   position: fixed;
@@ -19,6 +19,7 @@
     color: white;
   text-align: center;}
       }
+
     </style>
   </head>
   <body>
