--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         <img src="me2.jpg" alt="" width="200" height="200">
       </div>
       <div class="col-md-10">
-    <p> Nice to meet you! I am a college student currently focused on gaining knowledge to upstart my career as a web developer.
-      I work at KFC as a shift supervisor and juggle a hefty routine of work, school, sleep and repeat. Even witha busy schedule I still manage
-      to go for hikes and get to see nature. My favotie hike in all of San Diego is Iron Mountain. My favoite coding lanaguage is python but as I learn Javascript, it is increasingly becoming closer to my favorite.
-    
+    <p> Nice to meet you! I am a college student currently focused on gaining knowledge to upstart my career as a web developer. I 
+    have lots of tenacity when it comes pursuing my goals and working. I excel with trouble shooting and making technology work. I am good at 
+    talking with people and getting along in groups. In a group, I typically am the person who is coming up with innovative ideas to make the project easier better.
+    My skills include being able to code a small amount of python and html. Although I am knew to this career path, I have a feeling that I will be able to succeed with flying colors
       </p>
     </div>
       <div class="col-md-10">
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-md-12">
            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id modi voluptate consequatur beatae minus ab eveniet cupiditate. Quam eius architecto, repellendus laborum eos saepe vel cum provident suscipit maxime vitae.
+              
             </p>
           </div>
       </div>
