--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="portfolio.css">
   <style>
     h1 {
       color: purple;
@@ -23,8 +23,7 @@
     footer p {
       margin-left: 525px;
     }
-
-   
+    p{margin-left: 80px;}
   </style>
   <title>oooo</title>
 </head>
@@ -76,26 +75,29 @@
         </div>
         <div class="row">
           <div class="col-md-2">
-            <img src="me2.jpg" alt="" width="200" height="200">
+            <img src="me2.jpg" alt="" width="300" height="300">
           </div>
           <div class="col-md-10">
             <p> Nice to meet you! I am a college student currently focused on gaining knowledge to upstart my career as
-              a web developer. I
-              have lots of tenacity when it comes pursuing my goals and working. I excel with trouble shooting and
+              a web developer. When it comes to challenges, I
+              have tenacity in spades. I excel with trouble shooting and
               making technology work. I am good at
               talking with people and getting along in groups. In a group, I typically am the person who is coming up
-              with innovative ideas to make the project easier better.
-              My skills include being able to code a small amount of python and html. Although I am knew to this career
+              with innovative ideas to make the project easier and better.
+              My skills include being able to code python, CSS, JavaScript, and html. Although I am knew to this career
               path, I have a feeling that I will be able to succeed with flying colors
             </p>
           </div>
-          <div class="card" style="width: 18rem;" id="info">
+          <div class="card" style="width:300px" height = "300" id="info">
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Timothy Smith</li>
-              <li class="list-group-item">email: <timothytsmith8@gmail class="com"></timothytsmith8@gmail>
-              </li>
+              <li class="list-group-item">email: timothytsmith8@gmail</li>
               <li class="list-group-item">Phone: (619)341-7362</li>
-
+              <li class="list-group-item">GitHub profile: <a
+                  href="https://github.com/TimothySmith66">https://github.com/TimothySmith66</a></li>
+                  <li class="list-group-item">Linkedin profile: <a
+                    href="https://www.linkedin.com/in/timothy-smith-200">https://www.linkedin.com/in/timothy-smith-200</a></li>
+                    <a href="/images/myw3schoolsimage.jpg" download></a>
             </ul>
           </div>
           <div class="col-md-10">
