Project photo inserted with info

--- a/index.html
+++ b/index.html
@@ -84,14 +84,13 @@
               making technology work. I am good at
               talking with people and getting along in groups. In a group, I typically am the person who is coming up
               with innovative ideas to make the project easier and better.
-              My skills include being able to code python, CSS, JavaScript, and html. Although I am knew to this career
-              path, I have a feeling that I will be able to succeed with flying colors
+              My skills include being able to code python, CSS, JavaScript, and html. 
             </p>
           </div>
           <div class="card" style="width:300px" height = "300" id="info">
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Timothy Smith</li>
-              <li class="list-group-item">email: timothytsmith8@gmail</li>
+              <li class="list-group-item">Email: timothytsmith8@gmail</li>
               <li class="list-group-item">Phone: (619)341-7362</li>
               <li class="list-group-item">GitHub profile: <a
                   href="https://github.com/TimothySmith66">https://github.com/TimothySmith66</a></li>
