--- a/portfolio.html
+++ b/portfolio.html
@@ -63,22 +63,50 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <img src="me.jpeg" style="margin-bottom: 10px;" alt="" width="350" height="350" id="imager">
+        <div class="card" style="width: 350px;">
+          <h5 class="card-title">Marvel Hero-Finder</h5>
+          <img src="Final project2.PNG" class="card-img-top" alt="application screenshot" style="margin-bottom: 10px;"
+            width="350" height="350" id="imager">
+          <div class="card-body">
+            <p class="card-text">GitHub Repository:<a
+                href="https://github.com/anzelcapparelli/marvelHeroFinder">https://github.com/anzelcapparelli/marvelHeroFinder</a>
+            </p>
+            <p class="card-text">Deployed Website:<a
+                href="https://anzelcapparelli.github.io/marvelHeroFinder">https://anzelcapparelli.github.io/marvelHeroFinder</a>
+            </p>
+          </div>
+        </div>
+
       </div>
 
 
 
       <div class="col-md-3">
-        <img src="me.jpeg" style="margin-left: 30px;" style="margin-bottom: 10px;" alt="" width="350" height="350" id="imager">
+        <div class="card" style="width: 350px;" style="margin-bottom: 10px;" margin-left="100px">
+          <h5 class="card-title">Marvel Hero-Finder</h5>
+          <img src="Final project2.PNG" class="card-img-top" alt="application screenshot" 
+            width="350" height="350" id="imager">
+          <div class="card-body">
+            <p class="card-text">GitHub Repository:<a
+                href="https://github.com/anzelcapparelli/marvelHeroFinder">https://github.com/anzelcapparelli/marvelHeroFinder</a>
+            </p>
+            <p class="card-text">Deployed Website:<a
+                href="https://anzelcapparelli.github.io/marvelHeroFinder">https://anzelcapparelli.github.io/marvelHeroFinder</a>
+            </p>
+          </div>
+        </div>
+
       </div>
+
     </div>
     <div class="row">
       <div class="col-md-3">
-        <img src="me.jpeg" alt="" style="margin-bottom: 10px;"  margin-left="100px" width="350" height="350" id="imager">
+        <img src="me.jpeg" alt="" style="margin-bottom: 10px;" margin-left="100px" width="350" height="350" id="imager">
       </div>
 
       <div class="col-md-3">
-        <img src="me.jpeg" style="margin-left: 30px;" style="margin-bottom: 10px;" alt="" width="350" height="350" id="imager">
+        <img src="me.jpeg" style="margin-left: 30px;" style="margin-bottom: 10px;" alt="" width="350" height="350"
+          id="imager">
       </div>
     </div>
 
@@ -102,9 +130,7 @@
 
 
   </div>
-  </div>
-
-  </div>
+  
 
 
 </body>
