Added more projects photos and descriptions

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,8 +84,8 @@
       <div class="col-md-3">
         <div class="card" style="width: 350px;" style="margin-bottom: 10px;" margin-left="100px">
           <h5 class="card-title">Marvel Hero-Finder</h5>
-          <img src="Final project2.PNG" class="card-img-top" alt="application screenshot" 
-            width="350" height="350" id="imager">
+          <img src="Final project3.PNG" class="card-img-top" alt="application screenshot" width="350" height="350"
+            id="imager">
           <div class="card-body">
             <p class="card-text">GitHub Repository:<a
                 href="https://github.com/anzelcapparelli/marvelHeroFinder">https://github.com/anzelcapparelli/marvelHeroFinder</a>
@@ -101,36 +101,65 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <img src="me.jpeg" alt="" style="margin-bottom: 10px;" margin-left="100px" width="350" height="350" id="imager">
+        <div class="card" style="width: 350px;">
+          <h5 class="card-title">DynamicPasswordGenerator</h5>
+          <img src="password.PNG" class="card-img-top" alt="application screenshot" style="margin-bottom: 10px;"
+            width="350" height="350" id="imager">
+          <div class="card-body">
+            <p class="card-text">GitHub Repository:<a
+                href="https://github.com/TimothySmith66/DynamicPasswordGenerator.github.io">https://github.com/TimothySmith66/DynamicPasswordGenerator.github.io</a>
+            </p>
+            <p class="card-text">Deployed Website:<a
+                href="https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/">https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/</a>
+            </p>
+          </div>
+        </div>
+
       </div>
+
+
 
       <div class="col-md-3">
-        <img src="me.jpeg" style="margin-left: 30px;" style="margin-bottom: 10px;" alt="" width="350" height="350"
-          id="imager">
+        <div class="card" style="width: 350px;" style="margin-bottom: 10px;" margin-left="100px">
+          <h5 class="card-title">DynamicPasswordGenerator</h5>
+          <img src="password2.PNG" class="card-img-top" alt="application screenshot" width="350" height="350"
+            id="imager">
+          <div class="card-body">
+            <p class="card-text">GitHub Repository:<a
+                href="DynamicPasswordGenerator.github.io">DynamicPasswordGenerator.github.io</a>
+            </p>
+            <p class="card-text">Deployed Website:<a
+                href="https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/">https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/</a>
+            </p>
+          </div>
+        </div>
+
       </div>
-    </div>
+     
 
 
-    <div class="row">
-      <div class="col-md-3">
-        <img src="me.jpeg" alt="" width="350" height="350" id="imager">
 
-      </div>
-    </div>
-    <div class=row>
-      <div class="col-md-4">
+     <!-- <div class="row">
+        <div class="col-md-3">
+          <img src="me.jpeg" alt="" width="350" height="350" id="imager">
+          <img src="me.jpeg" alt="" style="margin-bottom: 10px;" margin-left="100px" width="350" height="350" id="imager">
+        </div>
+        </div>
+      </div>-->
+      <div class=row>
+        <div class="col-md-4">
 
-        <div class="footer">
-          <p> copyright 2020 Timothy Smith</p>
+          <div class="footer">
+            <p> copyright 2020 Timothy Smith</p>
+          </div>
         </div>
       </div>
+
+
+
+
     </div>
 
-
-
-
-  </div>
-  
 
 
 </body>
