--- a/index.html
+++ b/index.html
@@ -43,26 +43,25 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
-  <div class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Timothy Smith</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-          <a class="nav-link" href="index.html">About</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </nav>
+    <div class="row">
+      <div class="col-md-12">
+          <div class="navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Timothy Smith</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  <a class="nav-link" href="index.html">About</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </nav>
   <div class="container">
 
     <div class="row">
@@ -96,7 +95,8 @@
                   href="https://github.com/TimothySmith66">https://github.com/TimothySmith66</a></li>
                   <li class="list-group-item">Linkedin profile: <a
                     href="https://www.linkedin.com/in/timothy-smith-200">https://www.linkedin.com/in/timothy-smith-200</a></li>
-                    <a href="/images/myw3schoolsimage.jpg" download></a>
+                    <li class="list-group-item">Resume:<a
+                      href="https://docs.google.com/document/d/1Qe0GKozn0eEiYab7ncC3_2ms-DPF0lAougW0uyrkvD0/edit?usp=sharing" download="Timothy smith Resume">Resume download<img src="https://docs.google.com/document/d/1Qe0GKozn0eEiYab7ncC3_2ms-DPF0lAougW0uyrkvD0/edit?usp=sharing" alt=""></a></li>
             </ul>
           </div>
           <div class="col-md-10">
