--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,8 @@
       <h1> Portfolio</h1>
     </div>
     <div class="row">
-      <div class="col-md-3">
-        <div class="card" style="width: 350px;">
+      <div class="col-md-4">
+        <div class="card" style="width: 350px"; style="margin-bottom: 10px;">
           <h5 class="card-title">Marvel Hero-Finder</h5>
           <img src="Final project2.PNG" class="card-img-top" alt="application screenshot" style="margin-bottom: 10px;"
             width="350" height="350" id="imager">
@@ -81,7 +81,7 @@
 
 
 
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card" style="width: 350px;" style="margin-bottom: 10px;" margin-left="100px">
           <h5 class="card-title">Marvel Hero-Finder</h5>
           <img src="Final project3.PNG" class="card-img-top" alt="application screenshot" width="350" height="350"
@@ -100,7 +100,7 @@
 
     </div>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card" style="width: 350px;">
           <h5 class="card-title">DynamicPasswordGenerator</h5>
           <img src="password.PNG" class="card-img-top" alt="application screenshot" style="margin-bottom: 10px;"
@@ -119,7 +119,7 @@
 
 
 
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card" style="width: 350px;" style="margin-bottom: 10px;" margin-left="100px">
           <h5 class="card-title">DynamicPasswordGenerator</h5>
           <img src="password2.PNG" class="card-img-top" alt="application screenshot" width="350" height="350"
