--- a/portfolio.html
+++ b/portfolio.html
@@ -123,6 +123,44 @@
 
       </div>
      
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" style="width: 350px;">
+            <h5 class="card-title">database-setup-right</h5>
+            <video width="320" height="240" controls>
+              <source src="database.mp4" type="video/mp4">
+              <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+            </video>
+            <div class="card-body">
+              <p class="card-text">GitHub Repository:<a
+                  href="https://github.com/TimothySmith66/DynamicPasswordGenerator.github.io">https://github.com/TimothySmith66/DynamicPasswordGenerator.github.io</a>
+              </p>
+              <p class="card-text">Deployed Website:<a
+                  href="https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/">https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/</a>
+              </p>
+            </div>
+          </div>
+        </div>
+  
+  
+  
+        <div class="col-md-4">
+          <div class="card" style="width: 350px;" style="margin-bottom: 10px;" margin-left="100px">
+            <h5 class="card-title">database-setup-right</h5>
+            <img src="password2.PNG" class="card-img-top" alt="application screenshot" width="350" height="350"
+              id="imager">
+            <div class="card-body">
+              <p class="card-text">GitHub Repository:<a
+                  href="DynamicPasswordGenerator.github.io">DynamicPasswordGenerator.github.io</a>
+              </p>
+              <p class="card-text">Deployed Website:<a
+                  href="https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/">https://timothysmith66.github.io/DynamicPasswordGenerator.github.io/</a>
+              </p>
+            </div>
+          </div>
+  
+        </div>
 
 
     </div>
